feat: Adiciona primeiras alterações no site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Prixima BS5 Template</title>
+    <title>Premier Merchan Consultoria</title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="70">
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-auto">
-                    <p> <i class='bx bxs-envelope'></i> info@example.com</p>
-                    <p> <i class='bx bxs-phone-call'></i> 123 456-7890</p>
+                    <p> <i class='bx bxs-envelope'></i>contato@premiermerchan.com.br</p>
+                    <p> <i class='bx bxs-phone-call'></i> (92) 99407-1134</p>
                 </div>
                 <div class="col-auto social-icons">
                     <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -41,7 +41,7 @@
     <!-- BOTTOM NAV -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Prixima<span class="dot">.</span></a>
+            <a class="navbar-brand" href="#">Premier Merchan Consultoria<span class="dot">.</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,33 +52,27 @@
                         <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about">Sobre nós</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#services">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfólio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#reviews">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#blog">Blog</a>
+                        <a class="nav-link" href="#team">Time</a>
                     </li>
                 </ul>
-                <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                    class="btn btn-brand ms-lg-3">Contact</a>
+                <a id="contactUs" href="#" data-bs-toggle="modal" data-bs-target="#contactUsModal"
+                    class="btn btn-brand ms-lg-3">Contato</a>
             </div>
         </div>
     </nav>
 
     <!-- SLIDER -->
     <div class="owl-carousel owl-theme hero-slider">
-        <div class="slide slide1">
+        <!-- <div class="slide slide1">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center text-white">
@@ -89,15 +83,15 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="slide slide2">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-10 offset-lg-1 text-white">
-                        <h6 class="text-white text-uppercase">We craft digital experiances</h6>
-                        <h1 class="display-3 my-4">Design Driven For <br />Professionals</h1>
-                        <a href="#" class="btn btn-brand">Get Started</a>
-                        <a href="#" class="btn btn-outline-light ms-3">Our work</a>
+                        <h6 class="text-white text-uppercase">Consultoria estratégica</h6>
+                        <h1 class="display-3 my-4">Elevando o Marketing e vendas da sua Empresa<br /></h1>
+                        <a href="#about" class="btn btn-brand">Saiba mais</a>
+                        <a href="#services" class="btn btn-outline-light ms-3">Nosso Trabalho</a>
                     </div>
                 </div>
             </div>
@@ -115,13 +109,19 @@
                             <div class="info-box">
                                 <img src="img/icon6.png" alt="">
                                 <div class="ms-4">
-                                    <h5>Digital Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page </p>
+                                    <h5>Sobre nós</h5>
+                                    <p class="justify-text">Nós somos especializados em criar campanhas personalizadas para destacar seus produtos, aumentar a visibilidade da sua marca e impulsionar suas vendas.
+
+<br />Nós oferecemos suporte completo, desde a concepção até a execução da campanha, garantindo que seu produto receba a atenção que merece. Aproveite nossa experiência em promover produtos para aumentar sua presença no mercado e aumentar seu alcance.
+
+<br />Atuamos em diversos setores como varejo, moda, calçados, papelaria, entre outros.
+
+<br />
+<a id="faleConosco" data-bs-toggle="modal" data-bs-target="#contactUsModal">Entre em contato conosco</a> hoje para saber mais sobre como podemos ajudar a levar seus produtos ao próximo nível.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 mt-4">
+                        <!-- <div class="col-12 mt-4">
                             <div class="info-box">
                                 <img src="img/icon4.png" alt="">
                                 <div class="ms-4">
@@ -135,12 +135,12 @@
                             <div class="info-box">
                                 <img src="img/icon5.png" alt="">
                                 <div class="ms-4">
-                                    <h5>Buisness Marketing</h5>
+                                    <h5>Business Marketing</h5>
                                     <p>It is a long established fact that a reader will be distracted by the readable
                                         content of a page </p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -179,9 +179,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="intro">
-                        <h6>Our Services</h6>
-                        <h1>What We Do?</h1>
-                        <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        <h6>Nossos Serviços</h6>
+                        <h1>O que fazemos?</h1>
+                        <p class="mx-auto">Lorem Ipsum is not simply random text. It has
                             roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon1.png" alt="">
-                        <h5>Digital Marketing</h5>
+                        <h5>Premier Merchan Consultoria</h5>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                     </div>
@@ -364,66 +364,6 @@
         </div>
     </section>
 
-    <section class="bg-light" id="reviews">
-
-        <div class="owl-theme owl-carousel reviews-slider container">
-            <div class="review">
-                <div class="person">
-                    <img src="img/team_1.jpg" alt="">
-                    <h5>Ralph Edwards</h5>
-                    <small>Market Development Manager</small>
-                </div>
-                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut quis, rem culpa labore voluptate
-                    ullam! In, nostrum. Dicta, vero nihil. Delectus minus vitae rerum voluptatum, excepturi incidunt ut,
-                    enim nam exercitationem optio ducimus!</h3>
-                <div class="stars">
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <i class='bx bxs-quote-alt-left'></i>
-            </div>
-            <div class="review">
-                <div class="person">
-                    <img src="img/team_2.jpg" alt="">
-                    <h5>Ralph Edwards</h5>
-                    <small>Market Development Manager</small>
-                </div>
-                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut quis, rem culpa labore voluptate
-                    ullam! In, nostrum. Dicta, vero nihil. Delectus minus vitae rerum voluptatum, excepturi incidunt ut,
-                    enim nam exercitationem optio ducimus!</h3>
-                <div class="stars">
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <i class='bx bxs-quote-alt-left'></i>
-            </div>
-            <div class="review">
-                <div class="person">
-                    <img src="img/team_3.jpg" alt="">
-                    <h5>Ralph Edwards</h5>
-                    <small>Market Development Manager</small>
-                </div>
-                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut quis, rem culpa labore voluptate
-                    ullam! In, nostrum. Dicta, vero nihil. Delectus minus vitae rerum voluptatum, excepturi incidunt ut,
-                    enim nam exercitationem optio ducimus!</h3>
-                <div class="stars">
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <i class='bx bxs-quote-alt-left'></i>
-            </div>
-        </div>
-    </section>
-
     <section id="blog">
         <div class="container">
             <div class="row">
@@ -482,7 +422,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
-                        <h4 class="navbar-brand">Prixima<span class="dot">.</span></h4>
+                        <h4 class="navbar-brand">Premier Merchan Consultoria<span class="dot">.</span></h4>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                         <div class="col-auto social-icons">
@@ -501,14 +441,13 @@
             </div>
         </div>
         <div class="footer-bottom text-center">
-            <p class="mb-0">Copyright vicpra 2022. All rights Reserved</p> Distributed By <a
-                hrefs="https://themewagon.com">ThemeWagon</a>
+            <p class="mb-0">Copyright Premier Merchan Consultoria, 2023. Todos os direitos reservados</p>
         </div>
     </footer>
 
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="contactUsModal" tabindex="-1" aria-labelledby="contactUsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-body p-0">
@@ -523,32 +462,33 @@
                             <div class="col-lg-8">
                                 <form class="p-lg-5 col-12 row g-3">
                                     <div>
-                                        <h1>Get in touch</h1>
-                                        <p>Fell free to contact us and we will get back to you as soon as possible</p>
+                                        <h1>Fale conosco</h1>
+                                        <p>Fique a vontade para nos contactar, responderemos assim que possível. Estamos ansiosos pelo seu contato.</p>
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="userName" class="form-label">First name</label>
-                                        <input type="text" class="form-control" placeholder="Jon" id="userName"
+                                        <label for="userName" class="form-label">Nome</label>
+                                        <input type="text" class="form-control" placeholder="João" id="userName"
                                             aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="userName" class="form-label">Last name</label>
-                                        <input type="text" class="form-control" placeholder="Doe" id="userName"
+                                        <label for="userName" class="form-label">Sobrenome</label>
+                                        <input type="text" class="form-control" placeholder="Exemplo" id="userName"
                                             aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-12">
-                                        <label for="userName" class="form-label">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Johndoe@example.com"
+                                        <label for="userName" class="form-label">Seu Email</label>
+                                        <input type="email" class="form-control" placeholder="joao@example.com"
                                             id="userName" aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-12">
-                                        <label for="exampleInputEmail1" class="form-label">Enter Message</label>
-                                        <textarea name="" placeholder="This is looking great and nice."
+                                        <label for="exampleInputEmail1" class="form-label">Mensagem</label>
+                                        <textarea name="" placeholder="Conte para a gente como podemos ajudar."
                                             class="form-control" id="" rows="4"></textarea>
                                     </div>
 
                                     <div class="col-12">
-                                        <button type="submit" class="btn btn-brand">Send Message</button>
+                                        <button type="submit" class="btn btn-brand">Enviar</button>
+                                        <a id="closeModal" class="btn btn-brand">Fechar</a>
                                     </div>
                                 </form>
                             </div>
@@ -559,14 +499,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
