feat: Atualiza alguns textos e ajusta features

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">Premier Merchan<span class="dot">.</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -146,20 +146,20 @@
         <div class="container">
             <div class="row text-center justify-content-center gy-4">
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">90K+</h1>
-                    <p class="mb-0">Happy Clients</p>
+                    <h1 class="display-4">0</h1>
+                    <p class="mb-0">Clientes</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">45M</h1>
-                    <p class="mb-0">Lines of code</p>
+                    <h1 class="display-4">2K</h1>
+                    <p class="mb-0">Linhas de código</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">190</h1>
-                    <p class="mb-0">Total Downloads</p>
+                    <h1 class="display-4">3</h1>
+                    <p class="mb-0">Contatos Atendidos</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">380K</h1>
-                    <p class="mb-0">YouTube Subscribers</p>
+                    <h1 class="display-4">150</h1>
+                    <p class="mb-0">Seguidores no Instagram</p>
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon2.png" alt="">
-                        <h5>Logo Designing</h5>
+                        <h5>Design de Logo</h5>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                     </div>
@@ -197,7 +197,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon3.png" alt="">
-                        <h5>Buisness consulting</h5>
+                        <h5>Consultoria de negócio</h5>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                     </div>
@@ -205,7 +205,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon4.png" alt="">
-                        <h5>Videography</h5>
+                        <h5>Produção de vídeos</h5>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                     </div>
@@ -213,15 +213,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon5.png" alt="">
-                        <h5>Brand Identity</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service">
-                        <img src="img/icon6.png" alt="">
-                        <h5>Ethical Hacking</h5>
+                        <h5>Identidade de Marca</h5>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                     </div>
@@ -235,8 +227,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="intro">
-                        <h6>Work</h6>
-                        <h1>Successful projects</h1>
+                        <h6>Portifólio</h6>
+                        <h1>Projetos de Sucesso</h1>
                         <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                             roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
                     </div>
@@ -248,7 +240,7 @@
                 <div class="overlay"></div>
                 <img src="img/project1.jpg" alt="">
                 <div class="content">
-                    <h2>Consulting Marketing</h2>
+                    <h2>Consultoria de Marketing</h2>
                     <h6>Website Design</h6>
                 </div>
             </div>
@@ -256,7 +248,7 @@
                 <div class="overlay"></div>
                 <img src="img/project2.jpg" alt="">
                 <div class="content">
-                    <h2>Consulting Marketing</h2>
+                    <h2>Consultoria de Marketing</h2>
                     <h6>Website Design</h6>
                 </div>
             </div>
@@ -264,7 +256,7 @@
                 <div class="overlay"></div>
                 <img src="img/project3.jpg" alt="">
                 <div class="content">
-                    <h2>Consulting Marketing</h2>
+                    <h2>Consultoria de Marketing</h2>
                     <h6>Website Design</h6>
                 </div>
             </div>
@@ -272,7 +264,7 @@
                 <div class="overlay"></div>
                 <img src="img/project4.jpg" alt="">
                 <div class="content">
-                    <h2>Consulting Marketing</h2>
+                    <h2>Consultoria de Marketing</h2>
                     <h6>Website Design</h6>
                 </div>
             </div>
@@ -280,7 +272,7 @@
                 <div class="overlay"></div>
                 <img src="img/project5.jpg" alt="">
                 <div class="content">
-                    <h2>Consulting Marketing</h2>
+                    <h2>Consultoria de Marketing</h2>
                     <h6>Website Design</h6>
                 </div>
             </div>
@@ -292,8 +284,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="intro">
-                        <h6>Team</h6>
-                        <h1>Team Members</h1>
+                        <h6>Time</h6>
+                        <h1>Membros do Time</h1>
                         <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                             roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
                     </div>
@@ -314,7 +306,7 @@
                         </div>
 
                         <h5>Marvin McKinney</h5>
-                        <p>Marketing Coordinator</p>
+                        <p>Coordenador de Marketing</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
@@ -331,7 +323,7 @@
                         </div>
 
                         <h5>Kathryn Murphy</h5>
-                        <p>Ethical Hacker</p>
+                        <p>CEO</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
@@ -348,61 +340,8 @@
                         </div>
 
                         <h5>Darrell Steward</h5>
-                        <p>Software Developer</p>
+                        <p>Engenheiro de Software</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="blog">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="intro">
-                        <h6>Blog</h6>
-                        <h1>Blog Posts</h1>
-                        <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <img src="img/project5.jpg" alt="">
-                        <a href="#" class="tag">Web Design</a>
-                        <div class="content">
-                            <small>01 Dec, 2022</small>
-                            <h5>Web Design trends in 2022</h5>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                                piece of classical Latin literature from</p>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <img src="img/project4.jpg" alt="">
-                        <a href="#" class="tag">Programming</a>
-                        <div class="content">
-                            <small>01 Dec, 2022</small>
-                            <h5>Web Design trends in 2022</h5>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                                piece of classical Latin literature from</p>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <img src="img/project2.jpg" alt="">
-                        <a href="#" class="tag">Marketing</a>
-                        <div class="content">
-                            <small>01 Dec, 2022</small>
-                            <h5>Web Design trends in 2022</h5>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                                piece of classical Latin literature from</p>
-                        </div>
-                    </article>
                 </div>
             </div>
         </div>
@@ -423,16 +362,15 @@
                             <a href="#"><i class='bx bxl-pinterest'></i></a>
                         </div>
                         <div class="col-auto conditions-section">
-                            <a href="#">privacy</a>
-                            <a href="#">terms</a>
-                            <a href="#">disclaimer</i></a>
+                            <a href="#">Privacidade</a>
+                            <a href="#">Termos de uso</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="footer-bottom text-center">
-            <p class="mb-0">Copyright Premier Merchan Consultoria, 2023. Todos os direitos reservados</p>
+            <p class="mb-0">Premier Merchan  LTDA, 2023. Todos os direitos reservados</p>
         </div>
     </footer>
 
