feat: Pequenos ajustes 2

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- BOTTOM NAV -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
+            <img src="img/logo.JPG" style="max-width: 48px; margin-right: 10px" alt="Logo da Empresa">
             <a class="navbar-brand" href="./index.html">Premier Merchan<span class="dot">.</span></a>
             <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
