fix: Ajusta link para entrar em contato no sobre

--- a/index.html
+++ b/index.html
@@ -109,7 +109,13 @@
 <br />Atuamos em diversos setores como varejo, moda, calçados, papelaria, entre outros.
 
 <br />
-<a id="faleConosco" data-bs-toggle="modal" data-bs-target="#contactUsModal">Entre em contato conosco</a> hoje para saber mais sobre como podemos ajudar a levar seus produtos ao próximo nível.</p>
+<a
+  id="faleConosco"
+  href="#faleConosco"
+  data-bs-toggle="modal"
+  data-bs-target="#contactUsModal"
+  style="color: #0d6efd !important;"
+>Entre em contato conosco</a> hoje para saber mais sobre como podemos ajudar a levar seus produtos ao próximo nível.</p>
                                 </div>
                             </div>
                         </div>
@@ -401,7 +407,7 @@
                                 <form class="p-lg-5 col-12 row g-3">
                                     <div>
                                         <h1>Fale conosco</h1>
-                                        <p>Fique a vontade para nos contactar, responderemos assim que possível. Estamos ansiosos pelo seu contato.</p>
+                                        <p>Fique a vontade para entrar em contato, responderemos assim que possível. Estamos ansiosos pelo seu contato.</p>
                                     </div>
                                     <div class="col-lg-6">
                                         <label for="userName" class="form-label">Nome</label>
