update: Ajusta e adiciona rota de cashback

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
                     <p> <i class='bx bxs-phone-call'></i> (92) 99407-1134</p>
                 </div>
                 <div class="col-auto social-icons">
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-pinterest'></i></a>
+                    <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
+                    <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
             </div>
         </div>
@@ -312,10 +310,8 @@
                         <div class="image">
                             <img src="img/team_1.jpg" alt="">
                             <div class="social-icons">
-                                <a href="#"><i class='bx bxl-facebook'></i></a>
-                                <a href="#"><i class='bx bxl-twitter'></i></a>
-                                <a href="#"><i class='bx bxl-instagram'></i></a>
-                                <a href="#"><i class='bx bxl-pinterest'></i></a>
+                                <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
+                                <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
                             </div>
                             <div class="overlay"></div>
                         </div>
@@ -371,10 +367,8 @@
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                         <div class="col-auto social-icons">
-                            <a href="#"><i class='bx bxl-facebook'></i></a>
-                            <a href="#"><i class='bx bxl-twitter'></i></a>
-                            <a href="#"><i class='bx bxl-instagram'></i></a>
-                            <a href="#"><i class='bx bxl-pinterest'></i></a>
+                            <a href="" target="_blank"><i class='bx bxl-facebook'></i></a>
+                            <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
                         </div>
                         <div class="col-auto conditions-section">
                             <a href="#">Privacidade</a>
